--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-date-pickers": "^7.8.0",
+    "dayjs": "^1.11.11",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
